--- a/201_250.md
+++ b/201_250.md
@@ -285,13 +285,432 @@ Therefore, Option A is the most secure and reliable solution for ensuring that d
 
 </details>
 
+<details>
+  <summary>Question 209</summary>
 
+A solutions architect is designing the architecture of a new application being deployed to the AWS Cloud. The application will run on Amazon EC2 On-Demand Instances and will automatically scale across multiple Availability Zones. The EC2 instances will scale up and down frequently throughout the day. An Application Load Balancer (ALB) will handle the load distribution. The architecture needs to support distributed session data management. The company is willing to make changes to code if needed. What should the solutions architect do to ensure that the architecture supports distributed session data management?
 
+- [ ] A. Use Amazon ElastiCache to manage and store session data.
+- [ ] B. Use session affinity (sticky sessions) of the ALB to manage session data.
+- [ ] C. Use Session Manager from AWS Systems Manager to manage the session.
+- [ ] D. Use the GetSessionToken API operation in AWS Security Token Service (AWS STS) to manage the session.
 
+</details>
 
+<details>
+  <summary>Answer</summary>
 
+- [ ] A. Use Amazon ElastiCache to manage and store session data.
 
+Why these are the correct answers:
 
+A. Use Amazon ElastiCache to manage and store session data.
+
+- [ ] Amazon ElastiCache (either Memcached or Redis) provides a distributed, in-memory cache that can be used to store session data.
+- [ ] This allows any EC2 instance to retrieve session data, regardless of which instance originally handled the user's request.
+- [ ] It supports the dynamic nature of Auto Scaling, as instances can come and go without losing session information.
+
+Why are the other answers wrong?
+
+- [ ] B. Session affinity (sticky sessions) can maintain user sessions to specific instances, but it doesn't work well with Auto Scaling. Instances can be terminated, and traffic can be unevenly distributed.
+- [ ] C. AWS Systems Manager Session Manager is used for managing EC2 instances, not for storing application session data.
+- [ ] D. AWS STS GetSessionToken is for obtaining temporary security credentials, not for session data management.
+
+Therefore, Option A is the most appropriate choice for managing distributed session data in a dynamically scaling environment.
+
+</details>
+
+<details>
+  <summary>Question 210</summary>
+
+A company offers a food delivery service that is growing rapidly. Because of the growth, the company's order processing system is experiencing scaling problems during peak traffic hours. The current architecture includes the following:
+
+• A group of Amazon EC2 instances that run in an Amazon EC2 Auto Scaling group to collect orders from the application
+
+• Another group of EC2 instances that run in an Amazon EC2 Auto Scaling group to fulfill orders
+
+The order collection process occurs quickly, but the order fulfillment process can take longer. Data must not be lost because of a scaling event. A solutions architect must ensure that the order collection process and the order fulfillment process can both scale properly during peak traffic hours. The solution must optimize utilization of the company's AWS resources. Which solution meets these requirements?
+
+- [ ] A. Use Amazon CloudWatch metrics to monitor the CPU of each instance in the Auto Scaling groups. Configure each Auto Scaling group's minimum capacity according to peak workload values.
+- [ ] B. Use Amazon CloudWatch metrics to monitor the CPU of each instance in the Auto Scaling groups. Configure a CloudWatch alarm to invoke an Amazon Simple Notification Service (Amazon SNS) topic that creates additional Auto Scaling groups on demand.
+- [ ] C. Provision two Amazon Simple Queue Service (Amazon SQS) queues: one for order collection and another for order fulfillment. Configure the EC2 instances to poll their respective queue. Scale the Auto Scaling groups based on notifications that the queues send.
+- [ ] D. Provision two Amazon Simple Queue Service (Amazon SQS) queues: one for order collection and another for order fulfillment. Configure the EC2 instances to poll their respective queue. Create a metric based on a backlog per instance calculation. Scale the Auto Scaling groups based on this metric.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] D. Provision two Amazon Simple Queue Service (Amazon SQS) queues: one for order collection and another for order fulfillment. Configure the EC2 instances to poll their respective queue. Create a metric based on a backlog per instance calculation. Scale the Auto Scaling groups based on this metric.
+
+Why these are the correct answers:
+
+D. Provision two Amazon Simple Queue Service (Amazon SQS) queues: one for order collection and another for order fulfillment. Configure the EC2 instances to poll their respective queue. Create a metric based on a backlog per instance calculation. Scale the Auto Scaling groups based on this metric.
+
+- [ ] Using SQS queues decouples the order collection and fulfillment processes, allowing them to scale independently.
+- [ ] Scaling based on a backlog per instance calculation ensures that the Auto Scaling groups respond to the actual workload (number of orders waiting to be processed) rather than just CPU utilization.
+- [ ] This approach optimizes resource utilization by scaling based on demand and prevents order loss by queuing them.
+
+Why are the other answers wrong?
+
+- [ ] A. Configuring minimum capacity based on peak workload values does not optimize resource utilization; it leads to over-provisioning during off-peak hours.
+- [ ] B. Scaling based on CPU utilization might not accurately reflect the order processing load. High CPU can be due to other processes, while low CPU can still have a large order backlog. Using SNS to create Auto Scaling groups is not a standard or efficient practice.
+- [ ] C. Scaling based on notifications from queues doesn't provide a granular way to manage scaling based on the actual backlog of orders. It might lead to scaling actions that are not finely tuned to the demand.
+
+Therefore, Option D provides the most efficient and accurate solution for scaling the order processing system based on the actual order backlog.
+
+</details>
+
+<details>
+  <summary>Question 211</summary>
+
+A company hosts multiple production applications. One of the applications consists of resources from Amazon EC2, AWS Lambda, Amazon RDS, Amazon Simple Notification Service (Amazon SNS), and Amazon Simple Queue Service (Amazon SQS) across multiple AWS Regions. All company resources are tagged with a tag name of "application" and a value that corresponds to each application. A solutions architect must provide the quickest solution for identifying all of the tagged components. Which solution meets these requirements?
+
+- [ ] A. Use AWS CloudTrail to generate a list of resources with the application tag.
+- [ ] B. Use the AWS CLI to query each service across all Regions to report the tagged components.
+- [ ] C. Run a query in Amazon CloudWatch Logs Insights to report on the components with the application tag.
+- [ ] D. Run a query with the AWS Resource Groups Tag Editor to report on the resources globally with the application tag.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] D. Run a query with the AWS Resource Groups Tag Editor to report on the resources globally with the application tag.
+
+Why these are the correct answers:
+
+D. Run a query with the AWS Resource Groups Tag Editor to report on the resources globally with the application tag.
+
+- [ ] AWS Resource Groups Tag Editor allows you to search for and manage tags across multiple AWS services and Regions in a single view.
+- [ ] It is designed to quickly identify resources based on tags, providing the fastest way to meet the requirements.
+
+Why are the other answers wrong?
+
+- [ ] A. AWS CloudTrail records API calls but does not provide a direct, efficient way to list resources based on tags.
+- [ ] B. Using the AWS CLI to query each service across all Regions would be time-consuming and complex, requiring multiple commands and scripts.
+- [ ] C. Amazon CloudWatch Logs Insights is used for querying log data, not for listing AWS resources based on tags.
+
+Therefore, Option D is the most efficient and direct solution for identifying tagged components across multiple services and Regions.
+
+</details>
+
+<details>
+  <summary>Question 212</summary>
+
+A company needs to export its database once a day to Amazon S3 for other teams to access. The exported object size varies between 2 GB and 5 GB. The S3 access pattern for the data is variable and changes rapidly. The data must be immediately available and must remain accessible for up to 3 months. The company needs the most cost-effective solution that will not increase retrieval time. Which S3 storage class should the company use to meet these requirements?
+
+- [ ] A. S3 Intelligent-Tiering
+- [ ] B. S3 Glacier Instant Retrieval
+- [ ] C. S3 Standard
+- [ ] D. S3 Standard-Infrequent Access (S3 Standard-IA)
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] A. S3 Intelligent-Tiering
+
+Why these are the correct answers:
+
+A. S3 Intelligent-Tiering
+
+- [ ] S3 Intelligent-Tiering automatically optimizes storage costs by moving data between frequent and infrequent access tiers based on usage patterns.
+- [ ] It ensures data is immediately available with no retrieval fees, making it suitable for variable access patterns and the requirement for immediate availability.
+- [ ] This provides a cost-effective solution by reducing storage costs when data is accessed less frequently, without sacrificing performance.
+
+Why are the other answers wrong?
+
+- [ ] B. S3 Glacier Instant Retrieval is designed for long-term archive with immediate retrieval, but it is generally more expensive for frequently accessed data.
+- [ ] C. S3 Standard is suitable for frequently accessed data but does not optimize costs for data with variable access patterns.
+- [ ] D. S3 Standard-IA is more cost-effective for infrequently accessed data but has retrieval fees and can be more expensive if data access patterns vary significantly.
+
+Therefore, Option A is the most cost-effective solution that maintains immediate availability for data with variable access patterns.
+
+</details>
+
+<details>
+  <summary>Question 213</summary>
+
+A company is developing a new mobile app. The company must implement proper traffic filtering to protect its Application Load Balancer (ALB) against common application-level attacks, such as cross-site scripting or SQL injection. The company has minimal infrastructure and operational staff. The company needs to reduce its share of the responsibility in managing, updating, and securing servers for its AWS environment. What should a solutions architect recommend to meet these requirements?
+
+- [ ] A. Configure AWS WAF rules and associate them with the ALB.
+- [ ] B. Deploy the application using Amazon S3 with public hosting enabled.
+- [ ] C. Deploy AWS Shield Advanced and add the ALB as a protected resource.
+- [ ] D. Create a new ALB that directs traffic to an Amazon EC2 instance running a third-party firewall, which then passes the traffic to the current ALB.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] A. Configure AWS WAF rules and associate them with the ALB.
+
+Why these are the correct answers:
+
+A. Configure AWS WAF rules and associate them with the ALB.
+
+- [ ] AWS WAF is a web application firewall that protects web applications from common web exploits.
+- [ ] It integrates directly with the ALB, providing application-level filtering of traffic.
+- [ ] AWS WAF is a managed service, reducing the operational overhead for the company.
+
+Why are the other answers wrong?
+
+- [ ] B. Deploying the application using Amazon S3 with public hosting enabled does not provide protection against application-level attacks.
+- [ ] C. AWS Shield Advanced provides protection against DDoS attacks but does not filter specific application-level attacks like SQL injection or cross-site scripting.
+- [ ] D. Creating a new ALB with a third-party firewall on an EC2 instance increases operational overhead and complexity, contradicting the requirement to minimize management.
+
+Therefore, Option A is the most suitable solution to protect against application-level attacks with minimal operational overhead.
+
+</details>
+
+<details>
+  <summary>Question 214</summary>
+
+A company's reporting system delivers hundreds of .csv files to an Amazon S3 bucket each day. The company must convert these files to Apache Parquet format and must store the files in a transformed data bucket. Which solution will meet these requirements with the LEAST development effort?
+
+- [ ] A. Create an Amazon EMR cluster with Apache Spark installed. Write a Spark application to transform the data. Use EMR File System (EMRFS) to write files to the transformed data bucket.
+- [ ] B. Create an AWS Glue crawler to discover the data. Create an AWS Glue extract, transform, and load (ETL) job to transform the data. Specify the transformed data bucket in the output step.
+- [ ] C. Use AWS Batch to create a job definition with Bash syntax to transform the data and output the data to the transformed data bucket. Use the job definition to submit a job. Specify an array job as the job type.
+- [ ] D. Create an AWS Lambda function to transform the data and output the data to the transformed data bucket. Configure an event notification for the S3 bucket. Specify the Lambda function as the destination for the event notification.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] B. Create an AWS Glue crawler to discover the data. Create an AWS Glue extract, transform, and load (ETL) job to transform the data. Specify the transformed data bucket in the output step.
+
+Why these are the correct answers:
+
+B. Create an AWS Glue crawler to discover the data. Create an AWS Glue extract, transform, and load (ETL) job to transform the data. Specify the transformed data bucket in the output step.
+
+- [ ] AWS Glue provides a serverless ETL service that simplifies the process of transforming data.
+- [ ] AWS Glue crawler can automatically infer the schema of the .csv files.
+- [ ] AWS Glue ETL jobs can efficiently transform the data into Parquet format with minimal coding effort.
+
+Why are the other answers wrong?
+
+- [ ] A. Creating an Amazon EMR cluster and writing a Spark application involves more development and operational overhead compared to using AWS Glue.
+- [ ] C. Using AWS Batch requires defining job definitions and managing dependencies, which is more complex than using AWS Glue for simple ETL tasks.
+- [ ] D. Using AWS Lambda for transforming large numbers of files can be complex and may hit execution time limits. It also requires more effort to manage dependencies and scaling.
+
+Therefore, Option B is the most efficient solution with the least development effort for transforming .csv files to Parquet.
+
+</details>
+
+<details>
+  <summary>Question 215</summary>
+
+A company has 700 TB of backup data stored in network attached storage (NAS) in its data center. This backup data need to be accessible for infrequent regulatory requests and must be retained 7 years. The company has decided to migrate this backup data from its data center to AWS. The migration must be complete within 1 month. The company has 500 Mbps of dedicated bandwidth on its public internet connection available for data transfer. What should a solutions architect do to migrate and store the data at the LOWEST cost?
+
+- [ ] A. Order AWS Snowball devices to transfer the data. Use a lifecycle policy to transition the files to Amazon S3 Glacier Deep Archive.
+- [ ] B. Deploy a VPN connection between the data center and Amazon VPC. Use the AWS CLI to copy the data from on premises to Amazon S3 Glacier.
+- [ ] C. Provision a 500 Mbps AWS Direct Connect connection and transfer the data to Amazon S3. Use a lifecycle policy to transition the files to Amazon S3 Glacier Deep Archive.
+- [ ] D. Use AWS DataSync to transfer the data and deploy a DataSync agent on premises. Use the DataSync task to copy files from the on-premises NAS storage to Amazon S3 Glacier.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] A. Order AWS Snowball devices to transfer the data. Use a lifecycle policy to transition the files to Amazon S3 Glacier Deep Archive.
+
+Why these are the correct answers:
+
+A. Order AWS Snowball devices to transfer the data. Use a lifecycle policy to transition the files to Amazon S3 Glacier Deep Archive.
+
+- [ ] AWS Snowball devices are cost-effective for transferring large amounts of data, especially when network bandwidth is limited.
+- [ ] Amazon S3 Glacier Deep Archive provides the lowest-cost storage for long-term retention of infrequently accessed data.
+- [ ] Using a lifecycle policy automates the transition of data to Glacier Deep Archive, reducing storage costs.
+
+Why are the other answers wrong?
+
+- [ ] B. Transferring 700 TB of data over a 500 Mbps internet connection would take a very long time, exceeding the 1-month migration requirement.
+- [ ] C. Provisioning an AWS Direct Connect connection is more expensive than using Snowball for a one-time migration of this size.
+- [ ] D. AWS DataSync is designed for ongoing data synchronization and is more expensive than Snowball for a large, one-time data migration.
+
+Therefore, Option A is the most cost-effective and time-efficient solution for migrating and storing the backup data.
+
+</details>
+
+<details>
+  <summary>Question 216</summary>
+
+A company has a serverless website with millions of objects in an Amazon S3 bucket. The company uses the S3 bucket as the origin for an Amazon CloudFront distribution. The company did not set encryption on the S3 bucket before the objects were loaded. A solutions architect needs to enable encryption for all existing objects and for all objects that are added to the S3 bucket in the future. Which solution will meet these requirements with the LEAST amount of effort?
+
+- [ ] A. Create a new S3 bucket. Turn on the default encryption settings for the new S3 bucket. Download all existing objects to temporary local storage. Upload the objects to the new S3 bucket.
+- [ ] B. Turn on the default encryption settings for the S3 bucket. Use the S3 Inventory feature to create a .csv file that lists the unencrypted objects. Run an S3 Batch Operations job that uses the copy command to encrypt those objects.
+- [ ] C. Create a new encryption key by using AWS Key Management Service (AWS KMS). Change the settings on the S3 bucket to use server-side encryption with AWS KMS managed encryption keys (SSE-KMS). Turn on versioning for the S3 bucket.
+- [ ] D. Navigate to Amazon S3 in the AWS Management Console. Browse the S3 bucket's objects. Sort by the encryption field. Select each unencrypted object. Use the Modify button to apply default encryption settings to every unencrypted object in the S3 bucket.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] B. Turn on the default encryption settings for the S3 bucket. Use the S3 Inventory feature to create a .csv file that lists the unencrypted objects. Run an S3 Batch Operations job that uses the copy command to encrypt those objects.
+
+Why these are the correct answers:
+
+B. Turn on the default encryption settings for the S3 bucket. Use the S3 Inventory feature to create a .csv file that lists the unencrypted objects. Run an S3 Batch Operations job that uses the copy command to encrypt those objects.
+
+- [ ] S3 Batch Operations can efficiently encrypt existing objects at scale.
+- [ ] Using S3 Inventory simplifies the process of identifying unencrypted objects.
+- [ ] This approach minimizes the effort required to encrypt a large number of existing objects.
+- [ ] Setting default encryption ensures that future objects are automatically encrypted.
+
+Why are the other answers wrong?
+
+- [ ] A. Creating a new bucket and copying all objects is time-consuming and involves more steps than using S3 Batch Operations.
+- [ ] C. While creating a KMS key and setting default encryption is a valid approach for future objects, it does not efficiently encrypt existing objects.
+- [ ] D. Manually encrypting objects through the AWS Management Console is impractical for millions of objects and requires significant manual effort.
+
+Therefore, Option B is the most efficient solution for encrypting both existing and future objects with the least amount of effort.
+
+</details>
+<details>
+  <summary>Question 217</summary>
+
+A company runs a global web application on Amazon EC2 instances behind an Application Load Balancer. The application stores data in Amazon Aurora. The company needs to create a disaster recovery solution and can tolerate up to 30 minutes of downtime and potential data loss. The solution does not need to handle the load when the primary infrastructure is healthy. What should a solutions architect do to meet these requirements?
+
+- [ ] A. Deploy the application with the required infrastructure elements in place. Use Amazon Route 53 to configure active-passive failover. Create an Aurora Replica in a second AWS Region.
+- [ ] B. Host a scaled-down deployment of the application in a second AWS Region. Use Amazon Route 53 to configure active-active failover. Create an Aurora Replica in the second Region.
+- [ ] C. Replicate the primary infrastructure in a second AWS Region. Use Amazon Route 53 to configure active-active failover. Create an Aurora database that is restored from the latest snapshot.
+- [ ] D. Back up data with AWS Backup. Use the backup to create the required infrastructure in a second AWS Region. Use Amazon Route 53 to configure active-passive failover. Create an Aurora second primary instance in the second Region.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] A. Deploy the application with the required infrastructure elements in place. Use Amazon Route 53 to configure active-passive failover. Create an Aurora Replica in a second AWS Region.
+
+Why these are the correct answers:
+
+A. Deploy the application with the required infrastructure elements in place. Use Amazon Route 53 to configure active-passive failover. Create an Aurora Replica in a second AWS Region.
+
+- [ ] Active-passive failover with Route 53 allows for automatic redirection of traffic to a standby region in case of a failure.
+- [ ] An Aurora Replica in a second region provides a ready-to-go database that can take over quickly.
+- [ ] This solution meets the requirements for disaster recovery with a tolerance for some downtime and data loss.
+
+Why are the other answers wrong?
+
+- [ ] B. Active-active failover is designed for high availability, not disaster recovery, and involves running a scaled-down deployment, which is not required by the scenario.
+- [ ] C. Replicating the entire primary infrastructure in a second region is more costly and complex than necessary for disaster recovery. Restoring from a snapshot can increase downtime.
+- [ ] D. Using AWS Backup and restoring the infrastructure increases downtime and potential data loss compared to having a pre-configured replica. Aurora doesn't have a "second primary instance" in the same way as some other databases.
+
+Therefore, Option A is the most suitable solution for a cost-effective disaster recovery plan with the specified recovery time objective (RTO).
+
+</details>
+<details>
+  <summary>Question 218</summary>
+
+A company has a web server running on an Amazon EC2 instance in a public subnet with an Elastic IP address. The default security group is assigned to the EC2 instance. The default network ACL has been modified to block all traffic. A solutions architect needs to make the web server accessible from everywhere on port 443. Which combination of steps will accomplish this task? (Choose two.)
+
+- [ ] A. Create a security group with a rule to allow TCP port 443 from source 0.0.0.0/0.
+- [ ] B. Create a security group with a rule to allow TCP port 443 to destination 0.0.0.0/0.
+- [ ] C. Update the network ACL to allow TCP port 443 from source 0.0.0.0/0.
+- [ ] D. Update the network ACL to allow inbound/outbound TCP port 443 from source 0.0.0.0/0 and to destination 0.0.0.0/0.
+- [ ] E. Update the network ACL to allow inbound TCP port 443 from source 0.0.0.0/0 and outbound TCP port 32768-65535 to destination 0.0.0.0/0.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] A. Create a security group with a rule to allow TCP port 443 from source 0.0.0.0/0.
+- [ ] E. Update the network ACL to allow inbound TCP port 443 from source 0.0.0.0/0 and outbound TCP port 32768-65535 to destination 0.0.0.0/0.
+
+Why these are the correct answers:
+
+A. Create a security group with a rule to allow TCP port 443 from source 0.0.0.0/0.
+
+- [ ] Security groups act as a virtual firewall for EC2 instances and must allow inbound traffic on port 443.
+- [ ] 0.0.0.0/0 allows traffic from any IP address.
+
+E. Update the network ACL to allow inbound TCP port 443 from source 0.0.0.0/0 and outbound TCP port 32768-65535 to destination 0.0.0.0/0.
+
+- [ ] Network ACLs act as a firewall for the subnet and must also allow both inbound traffic on port 443 and outbound traffic on ephemeral ports (32768-65535) for the server's responses.
+
+Why are the other answers wrong?
+
+- [ ] B. Security group rules specify allowed traffic, not destination.
+- [ ] C. Network ACLs need to allow both inbound and outbound traffic.
+- [ ] D. Network ACLs require ephemeral port ranges to be open for responses.
+
+Therefore, options A and E are necessary to allow inbound HTTPS traffic and the corresponding outbound responses.
+
+</details>
+<details>
+  <summary>Question 219</summary>
+
+A company's application is having performance issues. The application is stateful and needs to complete in-memory tasks on Amazon EC2 instances. The company used AWS CloudFormation to deploy infrastructure and used the M5 EC2 instance family. As traffic increased, the application performance degraded. Users are reporting delays when the users attempt to access the application. Which solution will resolve these issues in the MOST operationally efficient way?
+
+- [ ] A. Replace the EC2 instances with T3 EC2 instances that run in an Auto Scaling group. Make the changes by using the AWS Management Console.
+- [ ] B. Modify the CloudFormation templates to run the EC2 instances in an Auto Scaling group. Increase the desired capacity and the maximum capacity of the Auto Scaling group manually when an increase is necessary.
+- [ ] C. Modify the CloudFormation templates. Replace the EC2 instances with R5 EC2 instances. Use Amazon CloudWatch built-in EC2 memory metrics to track the application performance for future capacity planning.
+- [ ] D. Modify the CloudFormation templates. Replace the EC2 instances with R5 EC2 instances. Deploy the Amazon CloudWatch agent on the EC2 instances to generate custom application latency metrics for future capacity planning.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] D. Modify the CloudFormation templates. Replace the EC2 instances with R5 EC2 instances. Deploy the Amazon CloudWatch agent on the EC2 instances to generate custom application latency metrics for future capacity planning.
+
+Why these are the correct answers:
+
+D. Modify the CloudFormation templates. Replace the EC2 instances with R5 EC2 instances. Deploy the Amazon CloudWatch agent on the EC2 instances to generate custom application latency metrics for future capacity planning.
+
+- [ ] R5 instances are memory-optimized and suitable for in-memory tasks, addressing the application's needs.
+- [ ] CloudFormation allows for infrastructure as code, enabling repeatable and manageable deployments.
+- [ ] Custom latency metrics provide detailed insights into application performance, aiding in capacity planning.
+
+Why are the other answers wrong?
+
+- [ ] A. T3 instances are burstable and not ideal for consistent memory-intensive workloads. Making changes via the console is not operationally efficient.
+- [ ] B. Manually adjusting Auto Scaling group capacity is not efficient and does not fully automate scaling.
+- [ ] C. Built-in EC2 memory metrics might not provide the specific application-level latency metrics needed for detailed performance analysis.
+
+Therefore, Option D provides the best combination of performance, scalability, and operational efficiency.
+
+</details>
+<details>
+  <summary>Question 220</summary>
+
+A solutions architect is designing a new API using Amazon API Gateway that will receive requests from users. The volume of requests is highly variable; several hours can pass without receiving a single request. The data processing will take place asynchronously but should be completed within a few seconds after a request is made. Which compute service should the solutions architect have the API invoke to deliver the requirements at the lowest cost?
+
+- [ ] A. An AWS Glue job
+- [ ] B. An AWS Lambda function
+- [ ] C. A containerized service hosted in Amazon Elastic Kubernetes Service (Amazon EKS)
+- [ ] D. A containerized service hosted in Amazon ECS with Amazon EC2
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] B. An AWS Lambda function
+
+Why these are the correct answers:
+
+B. An AWS Lambda function
+
+- [ ] AWS Lambda is a serverless compute service that charges only for the compute time consumed.
+- [ ] It scales automatically and can handle variable workloads, including periods of inactivity.
+- [ ] Lambda functions can execute quickly and are suitable for asynchronous processing.
+
+Why are the other answers wrong?
+
+- [ ] A. AWS Glue jobs are designed for ETL (extract, transform, load) operations and are not suitable for real-time, low-latency processing.
+- [ ] C. Amazon EKS involves running and managing container orchestration, which is more expensive and complex than Lambda for this use case.
+- [ ] D. Amazon ECS with EC2 also requires managing infrastructure and is more expensive than Lambda for event-driven, variable workloads.
+
+Therefore, Option B provides the most cost-effective solution for the given requirements.
+
+</details>
 
 
 
