--- a/201_250.md
+++ b/201_250.md
@@ -712,7 +712,40 @@ Therefore, Option B provides the most cost-effective solution for the given requ
 
 </details>
 
+<details>
+  <summary>Question 221</summary>
 
+A company runs an application on a group of Amazon Linux EC2 instances. For compliance reasons, the company must retain all application log files for 7 years. The log files will be analyzed by a reporting tool that must be able to access all the files concurrently. Which storage solution meets these requirements MOST cost-effectively?
+
+- [ ] A. Amazon Elastic Block Store (Amazon EBS)
+- [ ] B. Amazon Elastic File System (Amazon EFS)
+- [ ] C. Amazon EC2 instance store
+- [ ] D. Amazon S3
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] D. Amazon S3
+
+Why these are the correct answers:
+
+D. Amazon S3
+
+-   [ ] Amazon S3 provides highly durable and cost-effective storage for long-term retention.
+-   [ ] It allows concurrent access to files by multiple tools and users.
+-   [ ] S3's scalability and cost-effectiveness make it suitable for storing large volumes of log data for extended periods.
+
+Why are the other answers wrong?
+
+-   [ ] A. Amazon EBS volumes are block storage and are attached to a single EC2 instance, making concurrent access difficult and costly for long-term storage.
+-   [ ] B. Amazon EFS is a file storage service for use with EC2 instances, but it is more expensive than S3 for long-term archival of log files.
+-   [ ] C. Amazon EC2 instance store provides temporary block storage that is ephemeral and not suitable for long-term retention or concurrent access.
+
+Therefore, Option D is the most cost-effective solution for long-term storage and concurrent access to log files.
+
+</details>
 
 
 
